--- a/client/src/main/resources/utc/pokerut/client/views/mainWindow.fxml
+++ b/client/src/main/resources/utc/pokerut/client/views/mainWindow.fxml
@@ -1,60 +1,55 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.control.ListView?>
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/" xmlns:fx="http://javafx.com/fxml/" fx:controller="utc.pokerut.client.ihmmain.controllers.MainController">
-    <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="293.5999755859375" minWidth="10.0" prefWidth="144.80001220703124" />
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="563.2" minWidth="10.0" prefWidth="555.9999877929688" />
-    </columnConstraints>
-    <rowConstraints>
-        <RowConstraints />
-        <RowConstraints maxHeight="190.8000244140625" minHeight="10.0" prefHeight="107.60001983642579" vgrow="SOMETIMES" />
-        <RowConstraints maxHeight="391.99998016357426" minHeight="10.0" prefHeight="391.99998016357426" vgrow="SOMETIMES" />
-    </rowConstraints>
-    <children>
-        <Pane style="-fx-background-color: #026502;" GridPane.columnIndex="1" GridPane.rowIndex="1">
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.control.Tooltip?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Label?>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/" xmlns:fx="http://javafx.com/fxml/" fx:controller="utc.pokerut.client.ihmmain.controllers.MainController">
+    <top>
+        <HBox alignment="CENTER_LEFT" style="-fx-background-color: #026502;">
             <children>
-                <ImageView fitHeight="102.0" fitWidth="337.0" layoutX="109.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
+                <ImageView pickOnBounds="true" preserveRatio="true" scaleX="0.7" scaleY="0.7">
                     <image>
                         <Image url="@../img/cardsIcon.png" />
                     </image>
                 </ImageView>
-            </children>
-        </Pane>
-        <Pane style="-fx-background-color: #026502;" GridPane.rowIndex="1">
-            <children>
-                <ImageView layoutX="13.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
+                <ImageView pickOnBounds="true" preserveRatio="true" scaleX="0.5" scaleY="0.5">
                     <image>
                         <Image url="@../img/mainTitle.png" />
                     </image>
                 </ImageView>
             </children>
-        </Pane>
-        <Pane style="-fx-background-color: #026502;" GridPane.rowIndex="2">
-            <children>
-                <VBox fx:id="showSideBar" alignment="CENTER" layoutX="11.0" layoutY="14.0" spacing="20.0">
-                    <children>
-                        <Button mnemonicParsing="false" text="Mon profil" />
-                        <Button mnemonicParsing="false" text="Voir une partie" />
-                        <Button mnemonicParsing="false" text="Se déconnecter" />
-                        <ListView fx:id="list" prefHeight="208.0" prefWidth="119.0" />
-                    </children>
-                </VBox>
-            </children>
-        </Pane>
-        <Pane GridPane.columnIndex="1" GridPane.rowIndex="2">
-            <fx:include fx:id="login" source="login.fxml" visible="true"/>
-        </Pane>
-    </children>
-</GridPane>
+        </HBox>
+    </top>
+
+    <left>
+        <VBox fx:id="showSideBar" alignment="BASELINE_CENTER" spacing="20.0" style="-fx-background-color: #026502; -fx-padding: 15;">
+            <Button fx:id="profileButton" text="Mon profil" onAction="#profileButtonClicked" />
+            <Button fx:id="viewGameButton" text="Voir une partie" onAction="#viewGameButtonClicked"/>
+            <Button fx:id="logoutButton" text="Se déconnecter" onAction="#logoutButtonClicked" />
+            <Label text="Joueurs connectés" style="-fx-font-weight:bold; -fx-font-size:20;" textFill="white"/>
+            <ScrollPane>
+                <ListView fx:id="list"/>
+            </ScrollPane>
+        </VBox>
+    </left>
+    <center>
+        <StackPane alignment="CENTER">
+            <fx:include fx:id="login" source="login.fxml" visible="${controller.loginView}"/>
+            <fx:include fx:id="create_profile" source="page1.fxml" visible="${controller.createProfileView}"/>
+        </StackPane>
+    </center>
+</BorderPane>
