--- a/client/src/main/resources/utc/pokerut/client/views/mainWindow.fxml
+++ b/client/src/main/resources/utc/pokerut/client/views/mainWindow.fxml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.control.ListView?>
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/" xmlns:fx="http://javafx.com/fxml/" fx:controller="utc.pokerut.client.ihmmain.controllers.MainController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="utc.pokerut.client.ihmmain.controllers.MainController">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="293.5999755859375" minWidth="10.0" prefWidth="144.80001220703124" />
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="563.2" minWidth="10.0" prefWidth="555.9999877929688" />
@@ -25,21 +23,21 @@
     <children>
         <Pane style="-fx-background-color: #026502;" GridPane.columnIndex="1" GridPane.rowIndex="1">
             <children>
-                <ImageView fitHeight="102.0" fitWidth="337.0" layoutX="109.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
-                    <image>
-                        <Image url="@../img/cardsIcon.png" />
-                    </image>
-                </ImageView>
-            </children>
-        </Pane>
-        <Pane style="-fx-background-color: #026502;" GridPane.rowIndex="1">
-            <children>
-                <ImageView layoutX="13.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
+                <ImageView fitHeight="83.0" fitWidth="608.0" layoutX="114.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true">
                     <image>
                         <Image url="@../img/mainTitle.png" />
                     </image>
                 </ImageView>
             </children>
+        </Pane>
+        <Pane style="-fx-background-color: #026502;" GridPane.rowIndex="1">
+         <children>
+                <ImageView fitHeight="92.0" fitWidth="119.0" layoutX="13.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@../img/cardsIcon.png" />
+                    </image>
+                </ImageView>
+         </children>
         </Pane>
         <Pane style="-fx-background-color: #026502;" GridPane.rowIndex="2">
             <children>
@@ -54,7 +52,12 @@
             </children>
         </Pane>
         <Pane GridPane.columnIndex="1" GridPane.rowIndex="2">
-            <fx:include fx:id="login" source="login.fxml" visible="true"/>
+            <fx:include fx:id="login" source="login.fxml" />
+            <!--
+            <fx:include fx:id="importProfile" source="importProfile.fxml" />
+            <fx:include fx:id="importProfile" source="importProfile.fxml" />
+            <fx:include fx:id="createProfile" source="importProfile.fxml" />
+            -->
         </Pane>
     </children>
 </GridPane>
