--- a/client/src/main/resources/utc/pokerut/client/views/login.fxml
+++ b/client/src/main/resources/utc/pokerut/client/views/login.fxml
@@ -14,11 +14,11 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" >
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="utc.pokerut.client.ihmmain.controllers.LoginController">
    <bottom>
       <HBox alignment="CENTER" prefHeight="112.0" prefWidth="600.0" spacing="50.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="loginButton" mnemonicParsing="false" text="Se connecter" />
+            <Button fx:id="loginButton" mnemonicParsing="false" onAction="#loginUser" text="Se connecter" />
             <Button mnemonicParsing="false" text="Créer un profil" />
             <Button mnemonicParsing="false" text="Importer un profil" />
          </children>
@@ -40,7 +40,7 @@
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
                   <TextField fx:id="username" GridPane.columnIndex="1" />
