--- a/client/src/main/resources/utc/pokerut/client/views/login.fxml
+++ b/client/src/main/resources/utc/pokerut/client/views/login.fxml
@@ -14,13 +14,13 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="utc.pokerut.client.ihmmain.controllers.LoginController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/" xmlns:fx="http://javafx.com/fxml/" fx:controller="utc.pokerut.client.ihmmain.controllers.LoginController">
    <bottom>
       <HBox alignment="CENTER" prefHeight="112.0" prefWidth="600.0" spacing="50.0" BorderPane.alignment="CENTER">
          <children>
             <Button fx:id="loginButton" mnemonicParsing="false" onAction="#loginUser" text="Se connecter" />
-            <Button mnemonicParsing="false" text="Créer un profil" />
-            <Button mnemonicParsing="false" text="Importer un profil" />
+            <Button mnemonicParsing="false" text="Créer un profil" onAction="#navigateToCreateProfile"/>
+            <Button mnemonicParsing="false" text="Importer un profil" onAction="#navigateToImportProfile"/>
          </children>
       </HBox>
    </bottom>
