--- a/client/src/main/resources/utc/pokerut/client/views/tablesView.fxml
+++ b/client/src/main/resources/utc/pokerut/client/views/tablesView.fxml
@@ -24,73 +24,18 @@
   </content>
 </TitledPane> -->
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="utc.pokerut.client.ihmmain.controllers.TablesViewController">
-  <columnConstraints>
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-  </columnConstraints>
-  <rowConstraints>
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-  </rowConstraints>
-   <children>
-      <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #FFFFFF;">
-         <children>
-            <Label layoutX="52.0" layoutY="67.0" text="Tables disponibles :">
-               <font>
-                  <Font size="22.0" />
-               </font>
-            </Label>
-            <Button fx:id="createTableButton" alignment="CENTER" layoutX="429.0" layoutY="67.0" mnemonicParsing="false" style="-fx-background-color: #E3E3E3;" text="Créer une table" textAlignment="CENTER">
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </Button>
-         </children>
-      </Pane>
-      <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #FFFFFF;" GridPane.rowIndex="2">
-         <children>
-            <Button fx:id="joinButton" layoutX="459.0" layoutY="14.0" mnemonicParsing="false" onAction="#joinGame" style="-fx-background-color: #E3E3E3;" text="Rejoindre" textAlignment="CENTER">
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </Button>
-         </children>
-      </Pane>
-      <!-- Créer ObservableList Array ? 
-      <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #FFFFFF;" GridPane.rowIndex="1">
-         <children>
-            <TableView fx:id="displayTables" layoutX="51.0" prefHeight="133.0" prefWidth="498.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #000000;">
-               <columns>
-                  <TableColumn fx:id="nameField" prefWidth="75.0" style="-fx-background-color: #E3E3E3;" text="NOM"> 
-                     <cellValueFactory><PropertyValueFactory property="pseudo" />
-                     </cellValueFactory>
-                  </TableColumn>
-                  <TableColumn fx:id="creatorField" prefWidth="97.0" style="-fx-background-color: #E3E3E3;" text="CREATEUR">
-                     <cellValueFactory><PropertyValueFactory property="creator" />
-                     </cellValueFactory>
-                  </TableColumn>
-
-                  <TableColumn fx:id="nbToursFlied" prefWidth="75.0" style="-fx-background-color: #E3E3E3;" text="NB TOURS">
-                     <cellValueFactory><PropertyValueFactory property="nbRounds" />
-                     </cellValueFactory>
-                  </TableColumn>
-
-                  <TableColumn fx:id="betField" prefWidth="72.0" style="-fx-background-color: #E3E3E3;" text="MISE">
-                     <cellValueFactory><PropertyValueFactory property="bet" />
-                     </cellValueFactory>
-                  </TableColumn>
-                  <TableColumn fx:id="playersField" maxWidth="1.7976931348623157E308" prefWidth="101.0" style="-fx-background-color: #E3E3E3;" text="PARTICIPANTS">
-                     <cellValueFactory><PropertyValueFactory property="nbPlayers" />
-                     </cellValueFactory>
-                  </TableColumn>
-                  <TableColumn fx:id="statusField" prefWidth="83.0" style="-fx-background-color: #E3E3E3;" text="STATUT">
-                     <cellValueFactory><PropertyValueFactory property="status" />
-                     </cellValueFactory>
-                  </TableColumn>
-               </columns>
-            </TableView>
-         </children>
-      </Pane>-->
-   </children>
-</GridPane>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.control.ScrollPane?>
+<BorderPane xmlns:fx="http://javafx.com/fxml" fx:controller="utc.pokerut.client.ihmmain.controllers.TablesViewController">
+    <center>
+        <ScrollPane disable="false" visible="true">
+            <content>
+                <TableView fx:id="myTableView" prefHeight="-1.0" prefWidth="-1.0">
+                    <columns>
+                        <TableColumn fx:id="name" prefWidth="100.0" text="Id" />
+                    </columns>
+                </TableView>
+            </content>
+        </ScrollPane>
+    </center>
+</BorderPane>
