--- a/client/src/main/resources/utc/pokerut/client/views/login.fxml
+++ b/client/src/main/resources/utc/pokerut/client/views/login.fxml
@@ -77,7 +77,7 @@
                   <Font size="36.0" />
                </font>
             </Text>
-            <Label fx:id="errorMessage" layoutX="238.0" layoutY="87.0" text="Erreur de connexion" textAlignment="CENTER" textFill="RED" visible="false">
+            <Label fx:id="errorMessage" layoutX="238.0" layoutY="87.0" text="Erreur de connexion." textAlignment="CENTER" textFill="RED" visible="false">
                <font>
                   <Font size="14.0" />
                </font>
