--- a/client/src/main/resources/utc/pokerut/client/views/tablesView.fxml
+++ b/client/src/main/resources/utc/pokerut/client/views/tablesView.fxml
@@ -33,7 +33,7 @@
                 <TableView fx:id="myTableView" prefHeight="-1.0" prefWidth="-1.0">
                     <columns>
                         <TableColumn fx:id="name" prefWidth="100.0" text="Nom" />
-                        <TableColumn fx:id="creator" prefWidth="100.0" text="Créateur" />
+                        <TableColumn fx:id="pseudo" prefWidth="100.0" text="Créateur" />
                         <TableColumn fx:id="nbRounds" prefWidth="100.0" text="Nb tours" />
                         <TableColumn fx:id="tokens" prefWidth="100.0" text="Jetons" />
                         <TableColumn fx:id="players" prefWidth="100.0" text="Participants" />
