--- a/client/src/main/resources/utc/pokerut/client/views/login.fxml
+++ b/client/src/main/resources/utc/pokerut/client/views/login.fxml
@@ -14,26 +14,30 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/" xmlns:fx="http://javafx.com/fxml/" fx:controller="utc.pokerut.client.ihmmain.controllers.LoginController">
-   <bottom>
-      <HBox alignment="CENTER" prefHeight="112.0" prefWidth="600.0" spacing="50.0" BorderPane.alignment="CENTER">
-         <children>
-            <Button fx:id="loginButton" mnemonicParsing="false" onAction="#loginUser" text="Se connecter" />
-            <Button mnemonicParsing="false" text="Créer un profil" onAction="#navigateToCreateProfile"/>
-            <Button mnemonicParsing="false" text="Importer un profil" onAction="#navigateToImportProfile"/>
-         </children>
-      </HBox>
-   </bottom>
+<BorderPane xmlns="http://javafx.com/javafx/" xmlns:fx="http://javafx.com/fxml/" fx:controller="utc.pokerut.client.ihmmain.controllers.LoginController">
    <left>
-      <Pane prefHeight="286.0" prefWidth="96.0" BorderPane.alignment="CENTER" />
+       <!--<fx:include source="leftPanel.fxml"/>-->
+       <VBox fx:id="showSideBar" alignment="CENTER" style="-fx-background-color: #026502; -fx-padding: 128;"/>
+
    </left>
-   <right>
-      <Pane prefHeight="286.0" prefWidth="104.0" BorderPane.alignment="CENTER" />
-   </right>
    <center>
-      <VBox prefHeight="266.0" prefWidth="400.0" style="-fx-background-color: #E3E3E3;" BorderPane.alignment="CENTER">
+      <VBox  style="-fx-background-color: #E3E3E3;" BorderPane.alignment="CENTER">
          <children>
-            <GridPane prefHeight="119.0" prefWidth="400.0">
+             <VBox alignment="CENTER" spacing="10">
+                 <children>
+                     <Label textAlignment="CENTER" style="-fx-font-size:36; -fx-text-alignment:center;"  text="Connexion">
+                         <font>
+                             <Font size="36.0" />
+                         </font>
+                     </Label>
+                     <Label fx:id="errorMessage"  text="Erreur de connexion" textAlignment="CENTER" textFill="RED" visible="true">
+                         <font>
+                             <Font size="14.0" />
+                         </font>
+                     </Label>
+                 </children>
+             </VBox>
+            <GridPane>
               <columnConstraints>
                 <ColumnConstraints fillWidth="false" halignment="CENTER" hgrow="SOMETIMES" maxWidth="200.0" minWidth="10.0" prefWidth="198.4000244140625" />
                 <ColumnConstraints fillWidth="false" halignment="LEFT" hgrow="SOMETIMES" maxWidth="201.5999755859375" minWidth="10.0" prefWidth="201.5999755859375" />
@@ -49,7 +53,7 @@
                   <PasswordField fx:id="passwordField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                </children>
             </GridPane>
-            <GridPane prefHeight="69.0" prefWidth="400.0">
+            <GridPane>
               <columnConstraints>
                 <ColumnConstraints fillWidth="false" halignment="CENTER" hgrow="SOMETIMES" maxWidth="94.0" minWidth="10.0" prefWidth="75.0" />
                 <ColumnConstraints fillWidth="false" hgrow="SOMETIMES" maxWidth="148.0" minWidth="10.0" prefWidth="122.0" />
@@ -66,23 +70,14 @@
                   <TextField fx:id="port" prefHeight="30.0" prefWidth="120.0" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
                </children>
             </GridPane>
+             <HBox alignment="CENTER" spacing="20">
+                 <children>
+                     <Button fx:id="loginButton" mnemonicParsing="false" onAction="#loginUser" text="Se connecter" />
+                     <Button mnemonicParsing="false" text="Créer un profil" onAction="#navigateToCreateProfile"/>
+                     <Button mnemonicParsing="false" text="Importer un profil" onAction="#navigateToImportProfile"/>
+                 </children>
+             </HBox>
          </children>
       </VBox>
    </center>
-   <top>
-      <Pane prefHeight="111.0" prefWidth="600.0" BorderPane.alignment="CENTER">
-         <children>
-            <Text layoutX="209.0" layoutY="70.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Connection">
-               <font>
-                  <Font size="36.0" />
-               </font>
-            </Text>
-            <Label fx:id="errorMessage" layoutX="238.0" layoutY="87.0" text="Erreur de connexion" textAlignment="CENTER" textFill="RED" visible="false">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-         </children>
-      </Pane>
-   </top>
 </BorderPane>
