--- a/client/src/main/resources/utc/pokerut/client/views/mainWindow.fxml
+++ b/client/src/main/resources/utc/pokerut/client/views/mainWindow.fxml
@@ -54,7 +54,8 @@
             </children>
         </Pane>
         <Pane GridPane.columnIndex="1" GridPane.rowIndex="2">
-            <fx:include fx:id="login" source="login.fxml" visible="true"/>
+            <fx:include fx:id="login" source="login.fxml" visible="false"/>
+            <fx:include fx:id="créerUtilisateur" source="créerUtilisateur.fxml" visible="true"/>
         </Pane>
     </children>
 </GridPane>
