--- a/client/src/main/resources/utc/pokerut/client/views/mainWindow.fxml
+++ b/client/src/main/resources/utc/pokerut/client/views/mainWindow.fxml
@@ -19,16 +19,17 @@
 <?import javafx.scene.control.Label?>
 <BorderPane fx:id="frame" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/" xmlns:fx="http://javafx.com/fxml/" fx:controller="utc.pokerut.client.ihmmain.controllers.MainController">
     <top>
-        <HBox alignment="CENTER_LEFT" style="-fx-background-color: #026502;">
+        <HBox alignment="CENTER" style="-fx-background-color: #026502;">
             <children>
-                <ImageView pickOnBounds="true" preserveRatio="true" scaleX="0.7" scaleY="0.7">
-                    <image>
-                        <Image url="@../img/cardsIcon.png" />
-                    </image>
-                </ImageView>
+
                 <ImageView pickOnBounds="true" preserveRatio="true" scaleX="0.5" scaleY="0.5">
                     <image>
                         <Image url="@../img/mainTitle.png" />
+                    </image>
+                </ImageView>
+                <ImageView pickOnBounds="true" preserveRatio="true" scaleX="0.7" scaleY="0.7">
+                    <image>
+                        <Image url="@../img/cardsIcon.png" />
                     </image>
                 </ImageView>
             </children>
@@ -37,7 +38,10 @@
     <center>
         <StackPane alignment="CENTER">
             <fx:include fx:id="login" source="login.fxml" visible="${controller.loginView}"/>
-            <fx:include fx:id="create_profile" source="page1.fxml" visible="${controller.createProfileView}"/>
+            <fx:include fx:id="create_profile" source="createUser.fxml" visible="${controller.createProfileView}"/>
+            <fx:include fx:id="create_game" source="createGame.fxml" visible="${controller.createGameView}"/>
+            <fx:include fx:id="game_list" source="gameListView.fxml" visible="${controller.gameListView}"/>
+            <!--<fx:include fx:id="ihmGame" source="createUser.fxml" visible="${controller.createProfileView}"/>-->
         </StackPane>
     </center>
 </BorderPane>
