--- a/client/src/main/resources/utc/pokerut/client/views/login.fxml
+++ b/client/src/main/resources/utc/pokerut/client/views/login.fxml
@@ -4,40 +4,34 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane xmlns="http://javafx.com/javafx/" xmlns:fx="http://javafx.com/fxml/" fx:controller="utc.pokerut.client.ihmmain.controllers.LoginController">
-   <left>
+<HBox prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="utc.pokerut.client.ihmmain.controllers.LoginController">
        <!--<fx:include source="leftPanel.fxml"/>-->
-       <VBox fx:id="showSideBar" alignment="CENTER" style="-fx-background-color: #026502; -fx-padding: 128;"/>
-
-   </left>
-   <center>
-      <VBox  style="-fx-background-color: #E3E3E3;"  alignment="CENTER">
+       <VBox fx:id="showSideBar" alignment="CENTER" style="-fx-background-color: #026502; -fx-padding: 128;" />
+      <VBox alignment="CENTER" style="-fx-background-color: #E3E3E3;" HBox.hgrow="ALWAYS">
          <children>
-             <VBox alignment="CENTER" spacing="10">
+             <VBox alignment="CENTER" spacing="10" VBox.vgrow="ALWAYS">
                  <children>
-                     <Label textAlignment="CENTER" style="-fx-font-size:36; -fx-text-alignment:center;"  text="Connexion">
+                     <Label style="-fx-font-size:36; -fx-text-alignment:center;" text="Connexion" textAlignment="CENTER">
                          <font>
                              <Font size="36.0" />
                          </font>
                      </Label>
-                     <Label fx:id="errorMessage"  text="Erreur de connexion" textAlignment="CENTER" textFill="RED" visible="false">
+                     <Label fx:id="errorMessage" text="Erreur de connexion" textAlignment="CENTER" textFill="RED" visible="false">
                          <font>
                              <Font size="14.0" />
                          </font>
                      </Label>
                  </children>
              </VBox>
-            <GridPane alignment="CENTER">
+            <GridPane alignment="CENTER" VBox.vgrow="ALWAYS">
               <columnConstraints>
                 <ColumnConstraints fillWidth="false" halignment="CENTER" hgrow="SOMETIMES" maxWidth="200.0" minWidth="10.0" prefWidth="198.4000244140625" />
                 <ColumnConstraints fillWidth="false" halignment="LEFT" hgrow="SOMETIMES" maxWidth="201.5999755859375" minWidth="10.0" prefWidth="201.5999755859375" />
@@ -53,7 +47,7 @@
                   <PasswordField fx:id="passwordField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                </children>
             </GridPane>
-            <GridPane alignment="CENTER">
+            <GridPane alignment="CENTER" VBox.vgrow="ALWAYS">
               <columnConstraints>
                 <ColumnConstraints fillWidth="false" halignment="CENTER" hgrow="SOMETIMES" maxWidth="94.0" minWidth="10.0" prefWidth="75.0" />
                 <ColumnConstraints fillWidth="false" hgrow="SOMETIMES" maxWidth="148.0" minWidth="10.0" prefWidth="122.0" />
@@ -70,14 +64,13 @@
                   <TextField fx:id="port" prefHeight="30.0" prefWidth="120.0" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
                </children>
             </GridPane>
-             <HBox alignment="CENTER" spacing="20">
+             <HBox alignment="CENTER" spacing="20" VBox.vgrow="ALWAYS">
                  <children>
                      <Button fx:id="loginButton" mnemonicParsing="false" onAction="#loginUser" text="Se connecter" />
-                     <Button mnemonicParsing="false" text="Créer un profil" onAction="#navigateToCreateProfile"/>
-                     <Button mnemonicParsing="false" text="Importer un profil" onAction="#navigateToImportProfile"/>
+                     <Button mnemonicParsing="false" onAction="#navigateToCreateProfile" text="Créer un profil" />
+                     <Button mnemonicParsing="false" onAction="#navigateToImportProfile" text="Importer un profil" />
                  </children>
              </HBox>
          </children>
       </VBox>
-   </center>
-</BorderPane>
+</HBox>
