--- a/client/src/main/resources/utc/pokerut/client/views/gameTable.fxml
+++ b/client/src/main/resources/utc/pokerut/client/views/gameTable.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="utc.pokerut.client.HelloController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="utc.pokerut.client.ihmgame.GameViewController">
   <children>
     <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#038a03" height="403.0" layoutX="-3.0" layoutY="-3.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="603.0" />
     <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#006b00" height="400.0" layoutX="-1.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="601.0" />
