--- a/client/src/main/resources/utc/pokerut/client/views/mainWindow.fxml
+++ b/client/src/main/resources/utc/pokerut/client/views/mainWindow.fxml
@@ -42,6 +42,7 @@
             <fx:include fx:id="create_game" source="createGame.fxml" visible="${controller.createGameView}"/>
             <fx:include fx:id="game_list" source="gameListView.fxml" visible="${controller.gameListView}"/>
             <fx:include fx:id="ihmGame" source="gameTable.fxml" visible="${controller.ihmGameView}"/>
+            <fx:include fx:id="logout" source="logout.fxml" visible="${controller.logoutView}"/>
         </StackPane>
     </center>
 </BorderPane>
