--- a/client/src/main/resources/utc/pokerut/client/views/gameTable.fxml
+++ b/client/src/main/resources/utc/pokerut/client/views/gameTable.fxml
@@ -233,6 +233,7 @@
             <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
                 <Text fill="#f8f8f8" strokeType="OUTSIDE" strokeWidth="0.0" text="Nombre de joueurs:" wrappingWidth="118.0504150390625">
@@ -250,21 +251,23 @@
                         <Font name="Lucida Calligraphy Italic" size="10.0" />
                     </font>
                 </Text>
-                <Text text="${creditGame}" fill="#f8f8f8" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-background-color: #ffffff;" GridPane.columnIndex="1" GridPane.rowIndex="1" >
+                <Text fx:id="nbPlayers" fill="#f8f8f8" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-background-color: #ffffff;" GridPane.columnIndex="0" GridPane.rowIndex="1">
                     <font>
                         <Font name="Lucida Calligraphy Italic" size="10.0" />
                     </font>
                 </Text>
-                <Text fx:id="miseMin" fill="#f8f8f8" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-background-color: #ffffff;" GridPane.columnIndex="2" GridPane.rowIndex="1" >
+                <Text fx:id="creditGame" fill="#f8f8f8" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-background-color: #ffffff;" GridPane.columnIndex="1" GridPane.rowIndex="1">
                     <font>
                         <Font name="Lucida Calligraphy Italic" size="10.0" />
                     </font>
                 </Text>
-                <Text fx:id="nbPlayers" fill="#f8f8f8" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-background-color: #ffffff;" GridPane.rowIndex="1" >
+                <Text fx:id="miseMin" fill="#f8f8f8" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-background-color: #ffffff;" GridPane.columnIndex="2" GridPane.rowIndex="1">
                     <font>
                         <Font name="Lucida Calligraphy Italic" size="10.0" />
                     </font>
                 </Text>
+
+
             </children>
         </GridPane>
         <Text fx:id="creditTable" layoutX="398.0" layoutY="162.0" style="-fx-background-color: #ffffff;" />
