--- a/client/src/main/resources/utc/pokerut/client/views/betAction.fxml
+++ b/client/src/main/resources/utc/pokerut/client/views/betAction.fxml
@@ -10,6 +10,6 @@
    <children>
       <Button layoutX="194.0" layoutY="99.0" mnemonicParsing="false" text="Miser" onAction="#BetValue"/>
       <Text layoutX="48.0" layoutY="76.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Combien voulez-vous miser ?" />
-      <TextField layoutX="30.0" layoutY="99.0" />
+      <TextField fx:id="betting" layoutX="30.0" layoutY="99.0" />
    </children>
 </AnchorPane>
