--- a/client/src/main/resources/utc/pokerut/client/views/logout.fxml
+++ b/client/src/main/resources/utc/pokerut/client/views/logout.fxml
@@ -4,17 +4,24 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <HBox xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="utc.pokerut.client.ihmmain.controllers.LogoutController">
     <VBox fx:id="showSideBar" alignment="CENTER" style="-fx-background-color: #026502; -fx-padding: 128;" />
-    <VBox alignment="CENTER" style="-fx-background-color: #E3E3E3;">
+    <VBox alignment="CENTER" style="-fx-background-color: #E3E3E3;" HBox.hgrow="ALWAYS">
       <children>
-         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Vous avez été déconnecté(e) !" textAlignment="CENTER" />
-         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Vous avez été déconnecté(e) !" textAlignment="CENTER">
+            <VBox.margin>
+               <Insets bottom="50.0" />
+            </VBox.margin>
+            <font>
+               <Font size="24.0" />
+            </font></Text>
+         <HBox alignment="CENTER" spacing="100.0">
             <children>
-               <Button mnemonicParsing="false" text="Button" HBox.hgrow="ALWAYS" />
-               <Button mnemonicParsing="false" text="Button" HBox.hgrow="ALWAYS" />
+               <Button mnemonicParsing="false" onAction="#reconnect" text="Se reconnecter" HBox.hgrow="ALWAYS" />
+               <Button mnemonicParsing="false" onAction="#closeApp" text="Quitter" HBox.hgrow="ALWAYS" />
             </children>
             <opaqueInsets>
                <Insets />
