--- a/client/src/main/resources/utc/pokerut/client/views/gameTablePlay.fxml
+++ b/client/src/main/resources/utc/pokerut/client/views/gameTablePlay.fxml
@@ -241,7 +241,7 @@
       </Text>
       <Button layoutX="241.0" layoutY="360.0" mnemonicParsing="false" onAction="#Raise" text="Relancer" />
       <Button layoutX="323.0" layoutY="360.0" mnemonicParsing="false" onAction="#Call" text="Suivre" />
-      <Button layoutX="393.0" layoutY="360.0" mnemonicParsing="false" onAction="#Pass" text="Se coucher" />
+      <Button layoutX="393.0" layoutY="360.0" mnemonicParsing="false" onAction="#Fold" text="Se coucher" />
       <Button layoutX="485.0" layoutY="360.0" mnemonicParsing="false" onAction="#Check" text="Check" />
       <Button layoutX="173.0" layoutY="360.0" mnemonicParsing="false" onAction="#Bet" text="Miser" />
   </children>
