--- a/client/src/main/resources/utc/pokerut/client/views/gameListView.fxml
+++ b/client/src/main/resources/utc/pokerut/client/views/gameListView.fxml
@@ -25,31 +25,31 @@
   </content>
 </TitledPane> -->
 
-<BorderPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="utc.pokerut.client.ihmmain.controllers.GameListController">
-   <center>
-      <VBox prefHeight="400.0" prefWidth="550.0" BorderPane.alignment="CENTER">
+
+
+      <VBox BorderPane.alignment="CENTER" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="utc.pokerut.client.ihmmain.controllers.GameListController" spacing="30">
          <children>
-            <HBox alignment="CENTER" prefHeight="200.0" prefWidth="200.0" spacing="80.0" style="-fx-background-color: #FFFFFF;">
+            <HBox alignment="CENTER"  spacing="80.0" >
                <children>
                   <Label text="Tables disponibles :">
                      <font>
                         <Font size="18.0" />
                      </font></Label>
                   <Button fx:id="createGameButton" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#createGame" style="-fx-background-color: #E3E3E3;" text="Créer une table" textAlignment="CENTER" />
-                  <Button fx:id="refreshGameListButton" mnemonicParsing="false" onAction="#refreshGameList" style="-fx-background-color: #E3E3E3;" text="Actualiser" />
+
                </children>
             </HBox>
-              <ScrollPane disable="false" prefHeight="300.0" prefWidth="242.0" visible="true">
+              <ScrollPane disable="false" visible="true">
                   <content>
-                      <TableView fx:id="myTableView" prefHeight="500.0" prefWidth="510.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #000000;">
+                      <TableView fx:id="myTableView"  style="-fx-border-color: #000000;">
                           <columns>
-                              <TableColumn fx:id="id" prefWidth="100.0" style="-fx-background-color: #E3E3E3;" text="ID" visible="false" />
-                              <TableColumn fx:id="name" prefWidth="100.0" style="-fx-background-color: #E3E3E3;" text="NOM" />
-                              <TableColumn fx:id="creator" prefWidth="100.0" style="-fx-background-color: #E3E3E3;" text="CREATEUR" />
-                              <TableColumn fx:id="nbRounds" prefWidth="100.65693664550781" style="-fx-background-color: #E3E3E3;" text="NB TOURS MAX" />
-                              <TableColumn fx:id="minBet" prefWidth="68.34312438964844" style="-fx-background-color: #E3E3E3;" text="MISE MIN" />
-                              <TableColumn fx:id="nbPlayers" prefWidth="95.13092041015625" style="-fx-background-color: #E3E3E3;" text="PARTICIPANTS" />
-                              <TableColumn fx:id="status" prefWidth="73.86907958984375" style="-fx-background-color: #E3E3E3;" text="STATUT" />
+                              <TableColumn fx:id="id"  style="-fx-background-color: #E3E3E3;" text="ID" visible="false" />
+                              <TableColumn fx:id="name"  style="-fx-background-color: #E3E3E3;" text="NOM" />
+                              <TableColumn fx:id="creator"  style="-fx-background-color: #E3E3E3;" text="CREATEUR" />
+                              <TableColumn fx:id="nbRounds"  style="-fx-background-color: #E3E3E3;" text="NB TOURS MAX" />
+                              <TableColumn fx:id="minBet" style="-fx-background-color: #E3E3E3;" text="MISE MIN" />
+                              <TableColumn fx:id="nbPlayers"  style="-fx-background-color: #E3E3E3;" text="PARTICIPANTS" />
+                              <TableColumn fx:id="status" style="-fx-background-color: #E3E3E3;" text="STATUT" />
                           </columns>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -73,5 +73,4 @@
             </HBox>
          </children>
       </VBox>
-   </center>
-</BorderPane>
+
