--- a/client/src/main/resources/utc/pokerut/client/views/mainWindow.fxml
+++ b/client/src/main/resources/utc/pokerut/client/views/mainWindow.fxml
@@ -38,13 +38,13 @@
     <center>
         <StackPane alignment="CENTER">
             <fx:include fx:id="login" source="login.fxml" visible="${controller.loginView}"/>
-            <fx:include fx:id="createUser" source="createUser.fxml" visible="${controller.createProfileView}"/>
+            <fx:include fx:id="createProfile" source="createUser.fxml" visible="${controller.createProfileView}"/>
             <fx:include fx:id="createGame" source="createGame.fxml" visible="${controller.createGameView}"/>
             <fx:include fx:id="gameList" source="gameListView.fxml" visible="${controller.gameListView}"/>
             <fx:include fx:id="ihmGame" source="gameTable.fxml" visible="${controller.ihmGameView}"/>
         </StackPane>
     </center>
     <left>
-        <fx:include fx:id="leftPanel" source="leftPanel.fxml"/>
+        <fx:include fx:id="leftPanel" source="leftPanel.fxml"></fx:include>
     </left>
 </BorderPane>
