--- a/client/src/main/resources/utc/pokerut/client/views/login.fxml
+++ b/client/src/main/resources/utc/pokerut/client/views/login.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<HBox prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="utc.pokerut.client.ihmmain.controllers.LoginController">
+<HBox xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="utc.pokerut.client.ihmmain.controllers.LoginController">
       <VBox alignment="CENTER" style="-fx-background-color: #E3E3E3;" HBox.hgrow="ALWAYS">
          <children>
              <VBox alignment="CENTER" spacing="10" VBox.vgrow="ALWAYS">
