--- a/client/src/main/resources/utc/pokerut/client/views/betAction.fxml
+++ b/client/src/main/resources/utc/pokerut/client/views/betAction.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.text.Text?>
 
 
-<AnchorPane prefHeight="198.0" prefWidth="253.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="utc.pokerut.client.ihmgame.PlayGameController">
+<AnchorPane prefHeight="198.0" prefWidth="253.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="utc.pokerut.client.ihmgame.GameViewController">
    <children>
       <Button layoutX="194.0" layoutY="99.0" mnemonicParsing="false" text="Miser" onAction="#BetValue"/>
       <Text layoutX="48.0" layoutY="76.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Combien voulez-vous miser ?" />
