JOptionPane to replace by Alerts + leftPanel colored in green

--- a/client/src/main/resources/utc/pokerut/client/views/leftPanel.fxml
+++ b/client/src/main/resources/utc/pokerut/client/views/leftPanel.fxml
@@ -7,6 +7,6 @@
 <?import javafx.scene.layout.*?>
 
 
-<StackPane xmlns:fx="http://javafx.com/fxml/" fx:controller="utc.pokerut.client.ihmmain.controllers.LeftPanelController">
+<StackPane style="-fx-background-color: #026502;" xmlns:fx="http://javafx.com/fxml/" fx:controller="utc.pokerut.client.ihmmain.controllers.LeftPanelController">
     <fx:include fx:id="playerList" source="playerList.fxml" visible="${controller.isPlayerListVisible}"/>
 </StackPane>
