--- a/client/src/main/resources/utc/pokerut/client/views/gameTable.fxml
+++ b/client/src/main/resources/utc/pokerut/client/views/gameTable.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="utc.pokerut.client.ihmgame.GameViewController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="utc.pokerut.client.ihmgame.controllers.GameViewController">
     <children>
         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#006b00" height="410.0" layoutX="-4.0" layoutY="-4.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="606.0" />
         <Accordion layoutX="228.0" layoutY="171.0" />
