--- a/client/src/main/resources/utc/pokerut/client/views/raiseAction.fxml
+++ b/client/src/main/resources/utc/pokerut/client/views/raiseAction.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 
 <?import javafx.scene.text.Text?>
-<AnchorPane prefHeight="198.0" prefWidth="253.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="utc.pokerut.client.ihmgame.GameViewController">
+<AnchorPane prefHeight="198.0" prefWidth="253.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="utc.pokerut.client.ihmgame.controllers.GameViewController">
 
     <children>
         <Button layoutX="194.0" layoutY="99.0" mnemonicParsing="false" text="Relancer" onAction="#RaiseValue"/>
