--- a/client/src/main/resources/utc/pokerut/client/views/gameTable.fxml
+++ b/client/src/main/resources/utc/pokerut/client/views/gameTable.fxml
@@ -14,23 +14,33 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.control.ListView?>
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="utc.pokerut.client.ihmgame.controllers.GameViewController">
     <children>
         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#006b00" height="410.0" layoutX="-4.0" layoutY="-4.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="606.0" />
         <Accordion layoutX="228.0" layoutY="171.0" />
-        <Text fill="#fff8f8" layoutX="6.0" layoutY="34.0" stroke="#171717" strokeMiterLimit="15.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" Chat de la partie" wrappingWidth="159.66665649414062">
-            <font>
-                <Font name="Lucida Calligraphy Italic" size="12.0" />
-            </font>
-        </Text>
         <Ellipse fill="#0b800b" layoutX="367.0" layoutY="203.0" radiusX="159.0" radiusY="80.0" stroke="BLACK" strokeType="INSIDE" />
-        <ScrollPane layoutX="14.0" layoutY="46.0" prefHeight="301.0" prefWidth="116.0">
-            <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="301.0" prefWidth="97.0" />
-            </content>
-        </ScrollPane>
+        <Label fx:id="usernameLabel" text="Joueur X" textFill="#ffffff">
+            <font>
+                <Font name="HelveticaNeue Medium" size="14.0" />
+            </font>
+        </Label>
+            <ScrollPane layoutX="0.0" layoutY="30.0" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" pannable="true" prefHeight="300.0" prefWidth="120.0" vbarPolicy="ALWAYS" vmin="1.0" vvalue="1.0">
+                <content>
+                    <ListView fx:id="chatPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="200.0" />
+                </content>
+            </ScrollPane>
+                    <TextArea fx:id="messageBox"  layoutX="00.0" layoutY="330.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="10" minWidth="10.0" nodeOrientation="LEFT_TO_RIGHT" onKeyPressed="#sendMethod" prefHeight="23.0" prefWidth="100.0" promptText="Message..." scaleShape="true">
+                        <font>
+                            <Font name="SansSerif Regular" size="14.0" />
+                        </font>
+                    </TextArea>
+                    <Button fx:id="buttonSend" layoutX="100.0" layoutY="330.0" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="10" minWidth="10" mnemonicParsing="false" onAction="#sendButtonAction" prefHeight="23.0" prefWidth="60.0" scaleShape="false" text="Send" textAlignment="CENTER" HBox.hgrow="NEVER" />
 
-        <ImageView fx:id="avatarPlayer1" fitHeight="39.0" fitWidth="36.0" layoutX="201.0" layoutY="95.0" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="avatarPlayer1" fitHeight="39.0" fitWidth="36.0" layoutX="201.0" layoutY="95.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../img/ihmgame/other/avatar_h.png" />
             </image>
