--- a/client/src/main/resources/utc/pokerut/client/views/gameTable.fxml
+++ b/client/src/main/resources/utc/pokerut/client/views/gameTable.fxml
@@ -33,12 +33,12 @@
                     <ListView fx:id="chatPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="200.0" />
                 </content>
             </ScrollPane>
-                    <TextArea fx:id="messageBox"  layoutX="00.0" layoutY="330.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="10" minWidth="10.0" nodeOrientation="LEFT_TO_RIGHT" onKeyPressed="#sendMethod" prefHeight="23.0" prefWidth="100.0" promptText="Message..." scaleShape="true">
+                    <TextArea fx:id="messageBox"  layoutX="00.0" layoutY="330.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="10" minWidth="10.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="23.0" prefWidth="100.0" promptText="Message..." scaleShape="true">
                         <font>
                             <Font name="SansSerif Regular" size="14.0" />
                         </font>
                     </TextArea>
-                    <Button fx:id="buttonSend" layoutX="100.0" layoutY="330.0" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="10" minWidth="10" mnemonicParsing="false" onAction="#sendButtonAction" prefHeight="23.0" prefWidth="60.0" scaleShape="false" text="Send" textAlignment="CENTER" HBox.hgrow="NEVER" />
+                    <Button fx:id="buttonSend" layoutX="100.0" layoutY="330.0" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="10" minWidth="10" mnemonicParsing="false" prefHeight="23.0" prefWidth="60.0" scaleShape="false" text="Send" textAlignment="CENTER" HBox.hgrow="NEVER" />
 
     <ImageView fx:id="avatarPlayer1" fitHeight="39.0" fitWidth="36.0" layoutX="201.0" layoutY="95.0" pickOnBounds="true" preserveRatio="true">
             <image>
